--- a/src/app/shared/company-logo/company-logo.component.html
+++ b/src/app/shared/company-logo/company-logo.component.html
@@ -1,29 +1,9 @@
 <section class="py-6 border-t border-b border-gray-100 dark:border-gray-700">
     <div class="container relative">
         <div class="grid md:grid-cols-6 grid-cols-2 justify-center gap-[30px]">
-            <div class="mx-auto py-4">
-                <img src="assets/images/client/amazon.svg" class="h-6" alt="">
-            </div>
-
-            <div class="mx-auto py-4">
-                <img src="assets/images/client/google.svg" class="h-6" alt="">
-            </div>
-            
-            <div class="mx-auto py-4">
-                <img src="assets/images/client/lenovo.svg" class="h-6" alt="">
-            </div>
-            
-            <div class="mx-auto py-4">
-                <img src="assets/images/client/paypal.svg" class="h-6" alt="">
-            </div>
-            
-            <div class="mx-auto py-4">
-                <img src="assets/images/client/shopify.svg" class="h-6" alt="">
-            </div>
-            
-            <div class="mx-auto py-4">
-                <img src="assets/images/client/spotify.svg" class="h-6" alt="">
-            </div>
+            <div *ngFor="let logo of clientLogos" class="mx-auto py-4">
+                <img src="assets/images/client/{{logo}}" class="h-6" alt="">
+            </div>          
         </div>
     </div>
 </section>
