--- a/src/app/pages/index-digital-agency/index-digital-agency.component.html
+++ b/src/app/pages/index-digital-agency/index-digital-agency.component.html
@@ -74,34 +74,9 @@
         <h6 class="text-slate-400 text-lg">We are very fortunate to work with these amazing partners</h6>
     </div><!--end grid-->
 
-    <div class="grid md:grid-cols-6 grid-cols-2 justify-center gap-[30px]">
-        <div class="mx-auto mt-8">
-            <img src="assets/images/client/amazon.svg" class="h-6" alt="">
-        </div>
-
-        <div class="mx-auto mt-8">
-            <img src="assets/images/client/google.svg" class="h-6" alt="">
-        </div>
-        
-        <div class="mx-auto mt-8">
-            <img src="assets/images/client/lenovo.svg" class="h-6" alt="">
-        </div>
-        
-        <div class="mx-auto mt-8">
-            <img src="assets/images/client/paypal.svg" class="h-6" alt="">
-        </div>
-        
-        <div class="mx-auto mt-8">
-            <img src="assets/images/client/shopify.svg" class="h-6" alt="">
-        </div>
-        
-        <div class="mx-auto mt-8">
-            <img src="assets/images/client/spotify.svg" class="h-6" alt="">
-        </div>
-    </div><!--end grid-->
+    <app-company-logo></app-company-logo>
 </div><!--end container-->
-<!-- Business Partner -->
-  
+<!-- Business Partner --> 
 
 <!-- Start -->
 <section
@@ -403,7 +378,6 @@
       </p>
     </div>
     <!--end grid-->
-
     <app-slider1></app-slider1>
   </div>
   <!--end container-->
