--- a/src/app/shared/confortable-rates/confortable-rates.component.html
+++ b/src/app/shared/confortable-rates/confortable-rates.component.html
@@ -24,13 +24,12 @@
                                 <span class="price text-4xl font-semibold mb-0">39</span>
                                 <span class="text-xl font-semibold self-end mb-1">/mo</span>
                             </div>
-
                             <ul class="list-none text-slate-400">
-                                <li class="mb-1 flex"><i class="uil uil-check-circle text-indigo-600 text-xl me-2"></i> Full Access</li>
-                                <li class="mb-1 flex"><i class="uil uil-check-circle text-indigo-600 text-xl me-2"></i> Source Files</li>
-                                <li class="mb-1 flex"><i class="uil uil-check-circle text-indigo-600 text-xl me-2"></i> Free Appointments</li>
-                                <li class="mb-1 flex"><i class="uil uil-check-circle text-indigo-600 text-xl me-2"></i> Enhanced Security</li>
+                            <li *ngFor="let feature of features" class="mb-1 flex">
+                                <i [class]="feature.icon + ' me-2'"></i> {{ feature.text }}
+                              </li>
                             </ul>
+                            
                             <a href="" class="btn bg-indigo-600 hover:bg-indigo-700 border-indigo-600 hover:border-indigo-700 text-white rounded-md mt-5">Get Started</a>
                         </div>
                     </div>
@@ -46,11 +45,11 @@
                             </div>
 
                             <ul class="list-none text-slate-400">
-                                <li class="mb-1 flex"><i class="uil uil-check-circle text-indigo-600 text-xl me-2"></i> Full Access</li>
-                                <li class="mb-1 flex"><i class="uil uil-check-circle text-indigo-600 text-xl me-2"></i> Source Files</li>
-                                <li class="mb-1 flex"><i class="uil uil-check-circle text-indigo-600 text-xl me-2"></i> Free Appointments</li>
-                                <li class="mb-1 flex"><i class="uil uil-check-circle text-indigo-600 text-xl me-2"></i> Enhanced Security</li>
-                            </ul>
+                                <li *ngFor="let feature of features" class="mb-1 flex">
+                                    <i [class]="feature.icon + ' me-2'"></i> {{ feature.text }}
+                                  </li>
+                                </ul>
+                                
                             <a href="" class="btn bg-indigo-600 hover:bg-indigo-700 border-indigo-600 hover:border-indigo-700 text-white rounded-md mt-5">Try it Now</a>
                         </div>
                     </div>
