--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import "~bootstrap/dist/css/bootstrap.css";
+
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+// @import '~feather-icons/dist/feather.css';
